Test branch for compile time hbase2 version support